--- a/INDEX/INDEX/index.html
+++ b/INDEX/INDEX/index.html
@@ -88,18 +88,18 @@
         </li>
         <li><img src="HELPP.png" /><a href="#">Help</a></li>
         <li>
-          <img src="log.png" /><a href="#">Logout</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
+          <img src="log.png" /><a href="#">Logout
+          </a>
+          
+            
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="fname" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  ...
+                <a class="nav-link dropdown-toggle" id="fname" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item" onclick="logout()">Logout</a></li>
+                  <li><a class="dropdown-item" formaction="/action_login.html">Logout</a></li>
                 </ul>
               </li>
           </div>
