--- a/LOGIN/login.html
+++ b/LOGIN/login.html
@@ -29,7 +29,7 @@
   <div class="container">
     <div class="wrapper">
       <div class="title"><span>Login Form</span></div>
-      <form action="/INDEX/index.html" method="post">
+      <form action="/INDEX/INDEX/index.html" method="get">
         <script>
           function submitForm(event) {
             event.preventDefault();
@@ -49,7 +49,7 @@
         </div>
         <div class="pass"><a href="#">Forgot password?</a></div>
         <div class="row button">
-          <button class="w-100 btn btn-lg btn-primary mt-3" type="submit" onclick="submitFrom()">Login</button>
+          <button class="w-100 btn btn-lg btn-primary mt-3" type="submit" formaction="/INDEX/INDEX/index.html">login</button>
         </div>
         <div class="signup-link">Not a member? <a href="https://metalsassd1.github.io/register_project/?fbclid=IwAR1dbmrksWHWoiCpsr41F2aKv67Sc3Se1HcbbIWLMlz5pFYHnW227MZ_w0U">Signup now</a>
       </form>
